[gd_scene load_steps=13 format=3 uid="uid://c75lcu6etujpf"]

[ext_resource type="Script" path="res://prefabs/characters/player/player_flag/player_flag.gd" id="1_doyhw"]
[ext_resource type="PackedScene" uid="uid://npl4s72alvjw" path="res://prefabs/components/properties_/projectile_/projectile_component.tscn" id="1_i1dkc"]
[ext_resource type="Texture2D" uid="uid://qiy1fw8om25r" path="res://assets/aseprite/flagman.png" id="1_k21j7"]
[ext_resource type="Script" path="res://prefabs/components/properties_/velocity_/velocity_component.gd" id="3_0ykjo"]
[ext_resource type="Script" path="res://prefabs/components/properties_/stats_/stats_component.gd" id="4_6djib"]
[ext_resource type="Script" path="res://prefabs/components/properties_/orientation_handler_2d_simplified/orientation_handler_2d_simplified.gd" id="6_d0pd1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hk0wc"]
size = Vector2(20, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xbf3l"]
size = Vector2(18, 10)

[sub_resource type="Animation" id="Animation_0ttd0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-8, -31)]
}

[sub_resource type="Animation" id="Animation_e2a4l"]
resource_name = "flying"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -3), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.0174533, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-9, -30), Vector2(-8, -30)]
}

[sub_resource type="Animation" id="Animation_1xn4w"]
resource_name = "on_proj_free"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.261799]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pl251"]
_data = {
"RESET": SubResource("Animation_0ttd0"),
"flying": SubResource("Animation_e2a4l"),
"on_proj_free": SubResource("Animation_1xn4w")
}

[node name="PlayerFlag" type="CharacterBody2D" node_paths=PackedStringArray("animation_player", "detect_terrain_surface_area_2d", "projectile_component") groups=["PlayerProjectile"]]
collision_layer = 32
collision_mask = 9
motion_mode = 1
script = ExtResource("1_doyhw")
animation_player = NodePath("AnimationPlayer")
detect_terrain_surface_area_2d = NodePath("DetectTerrainSurfaceArea2D")
projectile_component = NodePath("ProjectileComponent")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 8
texture_filter = 1
position = Vector2(-8, -31)
texture = ExtResource("1_k21j7")
centered = false
offset = Vector2(0, -10)
hframes = 10
vframes = 7
frame = 10
region_rect = Rect2(0, 80, 24, 16)

[node name="DetectTerrainSurfaceArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 158

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectTerrainSurfaceArea2D"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_hk0wc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_xbf3l")

[node name="OrientationHandler2DSimplified" type="Node2D" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("6_d0pd1")
root = NodePath("..")
nodes_to_flip = Array[NodePath]([NodePath("..")])
ignore_diagonals = false

[node name="VelocityComponent" type="Node2D" parent="." node_paths=PackedStringArray("root", "stats_component")]
script = ExtResource("3_0ykjo")
root = NodePath("..")
stats_component = NodePath("../StatsComponent")
acceleration_coefficient = Vector2(3640, 2460)
friction = 0.0

[node name="ProjectileComponent" parent="." node_paths=PackedStringArray("root", "velocity_component", "orientation_handler", "stats_component") instance=ExtResource("1_i1dkc")]
z_index = 20
root = NodePath("..")
velocity_component = NodePath("../VelocityComponent")
orientation_handler = NodePath("../OrientationHandler2DSimplified")
stats_component = NodePath("../StatsComponent")

[node name="StatsComponent" type="Node2D" parent="." node_paths=PackedStringArray("root")]
script = ExtResource("4_6djib")
root = NodePath("..")
max_speed = Vector2(256, 192)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pl251")
}
